moonlight-rewrite/test/fixtures/CompileFail/CompiledFactRuleConstructor.hs
module CompiledFactRuleConstructor where

import Moonlight.Rewrite.System (CompiledFactRule (..))

constructorEscapes CompiledFactRule {} = ()
